--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,11 +23,6 @@ h1{
     font-weight: bold;
 }
 
-.footer {
-    font-family: var(--font-primary);
-    font-weight: 300;
-}
-
 /* --------------------------------------------------------------- */
 /* Navbar */
 /* --------------------------------------------------------------- */
@@ -40,7 +35,7 @@ h1{
 
 .nav-link {
     color: white !important;
-    margin: 0 30px;
+    margin: 0 40px;
     position: relative;
     transition: all 0.3s ease;
     font-size: 0.75rem;
@@ -66,11 +61,11 @@ h1{
 .nav-link.active::after {
     width: 100%;
     /* Shorter line */
-    background: var(--primary);
+    background: var(--red);
 }
 
 .nav-link.active {
-    color: var(--primary) !important;
+    color: var(--white) !important;
     font-weight: bold;
 }
 
@@ -156,7 +151,7 @@ h1{
 .footer p {
     color: rgba(0, 0, 0, 0.5);
     margin: 0;
-    font-size: 0.7rem;
-    font-weight: lighter;
+    font-size: 0.8rem;
+    font-weight: bold;
     text-transform: capitalize;
 }
