--- a/assets/css/var.css
+++ b/assets/css/var.css
@@ -28,14 +28,16 @@
     --text-dark: #1a237e;
     --dark-blue: #1a237e;
     --text-black: black;
-    --orange-light: #FFE0B2;
+    --orange-light: #F9CB93;
+    --orange: #FFB65E;
     --white: white;
     --text-gray: #808080;
-    --light-blue: #ADD8E6;
-    --sky-blue: #87CEEB;
+    --light-blue: #BED7E8;
+    --sky-blue: #91BBE3;
     --dark-gray: #333;
     --light-gray: #f5f5f5;
     --gray:gray;
+    --red: #DE1F26;
     --font-primary: 'Gunterz', sans-serif;
     --font-secondary: 'Gunterz', sans-serif;
 }
