--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
 @import url('var.css');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400&display=swap');
 
 /* --------------------------------------------------------------- */
 /* Font Type */
@@ -6,7 +7,8 @@
 body {
     background-color: var(--primary);
     color: white;
-    /* user-select: none; */
+    user-select: none;
+    font-family: 'Nunito Sans', sans-serif;
 }
 
 h1{
