--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,7 +47,7 @@ h1{
     transform: translateY(-2px);
 }
 
-.nav-link::after {
+/* .nav-link::after {
     content: '';
     position: absolute;
     width: 0;
@@ -62,8 +62,25 @@ h1{
 .nav-link:hover::after,
 .nav-link.active::after {
     width: 100%;
-    /* Shorter line */
     background: var(--red);
+} */
+
+.nav-link::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 10px; /* Adjust height as needed */
+    bottom: -5px; /* Adjust position */
+    left: 0;
+    background: url('../image/background-red-menu.png') no-repeat center;
+    background-size: cover;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.nav-link:hover::after,
+.nav-link.active::after {
+    opacity: 1;
 }
 
 .nav-link.active {
