--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
 @import url('var.css');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400&display=swap');
 
 /* --------------------------------------------------------------- */
 /* Font Type */
@@ -6,21 +7,28 @@
 body {
     background-color: var(--primary);
     color: white;
+    font-family: 'Nunito Sans', sans-serif;
     /* user-select: none; */
 }
 
-h1{
+h1 {
     font-family: var(--font-primary);
 }
 
 .navbar .nav-link {
     font-family: var(--font-primary);
-    font-weight: 500;
+    font-size: 18px;
 }
 
 .register-btn {
     font-family: var(--font-primary);
-    font-weight: bold;
+    font-size: 18px;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 10px;
 }
 
 /* --------------------------------------------------------------- */
@@ -28,49 +36,40 @@ h1{
 /* --------------------------------------------------------------- */
 .navbar {
     background-color: var(--dark-blue) !important;
-    padding: 1rem;
+    padding: 1vw 12vw;
     width: 100%;
     transition: all 0.3s ease;
 }
 
 .nav-link {
     color: white !important;
-    margin: 0 40px;
+    margin: 0 0.5vw;
     position: relative;
     transition: all 0.3s ease;
     font-size: 0.75rem;
+    padding: 0 !important;
+    padding: 16px 24px !important;
 }
 
 .nav-link:hover {
     transform: translateY(-2px);
 }
 
-.nav-link::after {
-    content: '';
-    position: absolute;
-    width: 0;
-    height: 2px;
-    background: white;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    transition: width 0.3s ease;
-}
 
-.nav-link:hover::after,
-.nav-link.active::after {
-    width: 100%;
-    /* Shorter line */
-    background: var(--red);
-}
-
+/* Add background image for active state */
 .nav-link.active {
     color: var(--white) !important;
     font-weight: bold;
+    background-image: url('../image/background-red-menu.png');
+    /* Add your image path */
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 /* Dropdown styles */
 .dropdown-menu {
+    width: 100%;
     background-color: var(--dark-blue);
     border: 1px solid rgba(255, 255, 255, 0.1);
     padding: 0.5rem;
@@ -80,12 +79,6 @@ h1{
     display: block;
     animation: fadeIn 0.3s ease;
 }
-
-/* .dropdown-header {
-    color: var(--primary);
-    font-weight: bold;
-    padding: 0;
-} */
 
 .dropdown-item {
     color: white;
@@ -120,9 +113,8 @@ h1{
 /* --------------------------------------------------------------- */
 .register-btn {
     background-color: white;
-    color: var(--text-dark) !important;
+    color: #3F3E5D !important;
     padding: 8px 25px !important;
-    font-weight: bold;
     transition: all 0.3s ease;
 }
 
@@ -135,17 +127,12 @@ h1{
     display: none;
 }
 
-.register-btn.active {
-    color: var(--text-dark) !important;
-}
-
 /* --------------------------------------------------------------- */
 /* Footer */
 /* --------------------------------------------------------------- */
 .footer {
     background-color: var(--primary);
     padding: 20px 0;
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .footer p {
