--- a/assets/css/responsive/index/index_991.css
+++ b/assets/css/responsive/index/index_991.css
@@ -1,16 +1,19 @@
 @media (max-width: 991px) {
+
     /* --------------------------------------------------------------- */
     /* Poster Section */
     /* --------------------------------------------------------------- */
     .poster-section {
-        margin-top: 75px;
-        height: 700px;
+        margin-top: 40px;
+        height: 100%;
     }
 
-    .poster-section img {
-        transform: scale(1.5);
-        transform-origin: top;
-        object-fit: contain;
+    .supported-logos img {
+        max-width: 55px;
+    }
+
+    .powered-logos img {
+        max-width: 80px;
     }
 
     /* --------------------------------------------------------------- */
