--- a/assets/css/var.css
+++ b/assets/css/var.css
@@ -26,7 +26,7 @@
     --nav-background: #1a237e;
     --text-light: #ffefdb;
     --text-dark: #1a237e;
-    --dark-blue: #1a237e;
+    --dark-blue: #224187;
     --text-black: black;
     --orange-light: #F9CB93;
     --orange: #FFB65E;
